--- a/src/About.scss
+++ b/src/About.scss
@@ -3,13 +3,13 @@
 .about {
   padding-top: 3%;
   h1 {
-    color: $color2;
+    color: $orange;
     font-weight: 500;
     line-height: 72px;
   }
 
   h2 {
-    color: $color1;
+    color: $blue;
     font-weight: 400;
     line-height: 44px;
     margin-top: 24px;
@@ -30,7 +30,7 @@
     margin-top: 16px;
 
     & > .people {
-      color: $color2;
+      color: $orange;
       font-size: 1.1rem;
       line-height: 24px;
       font-weight: 400;
@@ -50,7 +50,7 @@
       }
     }
     a {
-      color: $color2;
+      color: $orange;
       font-weight: 400;
     }
   }
@@ -77,7 +77,7 @@
       }
 
       .name {
-        color: $color2;
+        color: $orange;
         font-size: 1.1rem;
         line-height: 24px;
         font-weight: 400;
