--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -36,11 +36,11 @@
 }
 
 .nav-bar-component {
-  background-color: #3f51b2;
+  background-color: $black;
   height: 64px;
-  -webkit-box-shadow: 0px 2px rgba(0, 0, 0, 0.25);
+  /*-webkit-box-shadow: 0px 2px rgba(0, 0, 0, 0.25);
   -mox-box-shadow: 0px 2px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px rgba(0, 0, 0, 0.25);*/
   position: fixed;
   width: 100%;
   z-index: 9999;
@@ -53,12 +53,15 @@
   .logo-area {
     float: left;
     width: 320px;
+    @media screen and (min-width:1100px){
+      width:25%;
+    }
 
     .menu-icon {
       float: left;
-      padding: 16px;
-      padding-left: 32px;
-
+      padding: 16px 20px;
+      background:#222;
+      margin-right:16px;
       img {
         width: 32px;
         height: 32px;
@@ -79,16 +82,17 @@
   .search-box-area {
     float: left;
     width: 40%;
+    padding-left: 15px;
 
     @include media-breakpoint-down(md) {
       position: absolute;
       margin-top: 64px;
-      background-color: #3f51b2;
+      background-color: $red;
       width: 100%;
       padding-left: 36px;
       padding-right: 36px;
       box-sizing: border-box;
-      margin-top: 48px;
+      margin-top: 64px;
     }
   }
 
