--- a/src/UniversalStyles.scss
+++ b/src/UniversalStyles.scss
@@ -1,4 +1,7 @@
 @import '../node_modules/bootstrap/scss/_variables';
 @import '../node_modules/bootstrap/scss/mixins/_breakpoints';
-$color1: #3f51b2;
-$color2: #ff6f00;
+$blue: #3f51b2;
+$orange: #ff6f00;
+$black: #323232;
+$red: #d8382c;
+$grey: #eee;
