--- a/src/components/MapVisualization/MapVisualization.scss
+++ b/src/components/MapVisualization/MapVisualization.scss
@@ -13,7 +13,7 @@
   }
 
   .map-information {
-    border-bottom: 2px solid $color2;
+    border-bottom: 2px solid $red;
     height: 0px;
     overflow: hidden;
 
@@ -57,7 +57,7 @@
           padding-top: 30px;
 
           p {
-            color: $color2;
+            color: $orange;
             line-height: 20px;
             font-weight: 400;
           }
@@ -69,7 +69,7 @@
               font-weight: 500;
 
               &:last-child {
-                color: $color1;
+                color: $blue;
               }
             }
           }
