--- a/src/components/QuickSubmit/QuickSubmit.scss
+++ b/src/components/QuickSubmit/QuickSubmit.scss
@@ -29,10 +29,10 @@
   }
   .title {
     font-size: 2rem;
-    color: $color1;
+    color: $blue;
   }
   h2 {
-    color: $color1;
+    color: $blue;
     text-align: center;
     margin-bottom: 3rem;
   }
