--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,22 @@
+@font-face {
+  font-family:'Fakt';
+    src: url('fonts/FaktPro-Medium.ttf');
+  font-weight:600;
+  font-style:normal;
+}
+@font-face {
+  font-family:'Fakt';
+    src: url('fonts/FaktPro-Normal.ttf');
+  font-weight:500;
+  font-style:normal;
+}
+@font-face {
+  font-family:'Fakt';
+    src: url('fonts/FaktPro-Blond.ttf');
+  font-weight:400;
+  font-style:normal;
+}
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
 blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img,
 ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,
