--- a/src/About.scss
+++ b/src/About.scss
@@ -56,7 +56,7 @@
   }
 
   .accordion {
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #ece8e6;
     margin-top: 24px;
     margin-bottom: 48px;
 
