--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -13,10 +13,22 @@
   z-index: 30000;
   background-color: white;
   color: black;
+  transition:background-color 0.25s;
 }
 
 .drawer > div:nth-child(2) {
-  padding: 80px 0 0 20px;
+  padding: 64px 0 0 0;
+  a {
+    background:#fff;
+    div {
+      padding-left:20px;
+    }
+    &:hover, &:focus {
+      div {
+        background-color:$grey;
+      }
+    }
+  }
 }
 
 .menuitem a div div {
@@ -62,6 +74,9 @@
       padding: 16px 20px;
       background:#222;
       margin-right:16px;
+      &:hover{
+        background:#444;
+      }
       img {
         width: 32px;
         height: 32px;
