--- a/src/components/AccordionTab/AccordionTab.scss
+++ b/src/components/AccordionTab/AccordionTab.scss
@@ -1,7 +1,7 @@
 @import "./UniversalStyles";
 
 @mixin tab {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #ece8e6;
   padding: 24px;
   padding-right: 96px;
   position: relative;
