--- a/src/components/HelpBar/HelpBar.scss
+++ b/src/components/HelpBar/HelpBar.scss
@@ -98,7 +98,7 @@
         padding: 20px;
         display: block;
         &:hover, &:focus {
-          background-color: #eee;
+          background-color: #f3efec;
         }
       }
     }
