--- a/src/quill.snow.scss
+++ b/src/quill.snow.scss
@@ -541,7 +541,7 @@
   text-decoration: underline;
 }
 .ql-snow .ql-editor blockquote {
-  border-left: 4px solid #ccc;
+  border-left: 4px solid #ece8e6;
   margin-bottom: 5px;
   margin-top: 5px;
   padding-left: 16px;
@@ -613,14 +613,14 @@
   padding-top: 5px;
 }
 .ql-snow .ql-picker.ql-expanded .ql-picker-label {
-  color: #ccc;
+  color: #ece8e6;
   z-index: 2;
 }
 .ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-fill {
-  fill: #ccc;
+  fill: #ece8e6;
 }
 .ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-stroke {
-  stroke: #ccc;
+  stroke: #ece8e6;
 }
 .ql-snow .ql-picker.ql-expanded .ql-picker-options {
   display: block;
@@ -783,7 +783,7 @@
   background-color: #000;
 }
 .ql-toolbar.ql-snow {
-  border: 1px solid #ccc;
+  border: 1px solid #ece8e6;
   box-sizing: border-box;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   padding: 8px;
@@ -799,10 +799,10 @@
   box-shadow: rgba(0,0,0,0.2) 0 2px 8px;
 }
 .ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
-  border-color: #ccc;
+  border-color: #ece8e6;
 }
 .ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-options {
-  border-color: #ccc;
+  border-color: #ece8e6;
 }
 .ql-toolbar.ql-snow .ql-color-picker .ql-picker-item.ql-selected,
 .ql-toolbar.ql-snow .ql-color-picker .ql-picker-item:hover {
@@ -813,7 +813,7 @@
 }
 .ql-snow .ql-tooltip {
   background-color: #fff;
-  border: 1px solid #ccc;
+  border: 1px solid #ece8e6;
   box-shadow: 0px 0px 5px #ddd;
   color: #444;
   margin-top: 10px;
@@ -827,7 +827,7 @@
 }
 .ql-snow .ql-tooltip input[type=text] {
   display: none;
-  border: 1px solid #ccc;
+  border: 1px solid #ece8e6;
   font-size: 13px;
   height: 26px;
   margin: 0px;
@@ -842,7 +842,7 @@
   vertical-align: top;
 }
 .ql-snow .ql-tooltip a.ql-action::after {
-  border-right: 1px solid #ccc;
+  border-right: 1px solid #ece8e6;
   content: 'Edit';
   margin-left: 16px;
   padding-right: 8px;
@@ -879,5 +879,5 @@
   color: #06c;
 }
 .ql-container.ql-snow {
-  border: 1px solid #ccc;
+  border: 1px solid #ece8e6;
 }
