--- a/src/components/GeoSuggest/GeoSuggest.scss
+++ b/src/components/GeoSuggest/GeoSuggest.scss
@@ -1,7 +1,7 @@
 @import "./UniversalStyles";
 
 .geosuggest__input-wrapper {
-  border-bottom: 2px solid #eee;
+  border-bottom: 2px solid #f3efec;
   width: 28%;
   @include media-breakpoint-between(xs, sm) {
     width: 100%;
@@ -64,5 +64,5 @@
 }
 .geosuggest__item--active:hover,
 .geosuggest__item--active:focus {
-  background: #ccc;
+  background: #ece8e6;
 }
