--- a/src/components/SearchHit/SearchHit.scss
+++ b/src/components/SearchHit/SearchHit.scss
@@ -26,7 +26,7 @@
     bottom: 0;
     height: 1px;
     width: calc(100% - 30px);
-    border-bottom: 2px solid #eee;
+    border-bottom: 2px solid #f3efec;
   }
 }
 
@@ -36,7 +36,7 @@
   background-size: cover;
   background-position: center;
   margin-bottom: 10px;
-  background-color: #eee;
+  background-color: #f3efec;
   cursor: pointer;
 }
 
