--- a/src/components/SearchHitCategory/SearchHitCategory.scss
+++ b/src/components/SearchHitCategory/SearchHitCategory.scss
@@ -10,7 +10,7 @@
   color: #323232;
   line-height: 30px;
   padding: 20px 0 14px;
-  border-bottom:2px solid #eee;
+  border-bottom:2px solid #f3efec;
 }
 
 .results {
