--- a/src/UniversalStyles.scss
+++ b/src/UniversalStyles.scss
@@ -4,6 +4,10 @@ $blue: #3f51b2;
 $orange: #ff6f00;
 $black: #323232;
 $red: #ec1414; 
-$grey: #f3efec;
+$light-grey: #f3efec;
 $dark-grey: #ece8e6;
 $grey-text: #777;
+
+$primary-color: $black;
+$interactive-color: $red;
+
