--- a/src/components/SearchHit/SearchHit.scss
+++ b/src/components/SearchHit/SearchHit.scss
@@ -47,7 +47,7 @@
 }
 
 .result-title-text {
-  color: $black;
+  color: $primary-color;
   font-size: 20px;
   line-height: 26px;
   font-weight: 500;
@@ -57,6 +57,6 @@
   font-weight:600;
   &:hover, &:focus {
     text-decoration:underline;
-    color:$red;
+    color:$interactive-color;
   }
 }
