--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -25,7 +25,7 @@
     }
     &:hover, &:focus {
       div {
-        background-color:$grey;
+        background-color:$light-grey;
       }
     }
   }
@@ -36,10 +36,6 @@
   background: pink;
 }
 
-.content {
-  //font-family: Roboto, sans-serif;
-}
-
 .appbar {
   position: fixed !important;
   top: 0;
@@ -48,11 +44,8 @@
 }
 
 .nav-bar-component {
-  background-color: $black;
+  background-color: $primary-color;
   height: 64px;
-  /*-webkit-box-shadow: 0px 2px rgba(0, 0, 0, 0.25);
-  -mox-box-shadow: 0px 2px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 2px rgba(0, 0, 0, 0.25);*/
   position: fixed;
   width: 100%;
   z-index: 9999;
@@ -65,7 +58,7 @@
   .logo-area {
     float: left;
     width: 320px;
-    @media screen and (min-width:1100px){
+    @include media-breakpoint-up(lg){
       width:25%;
     }
 
@@ -102,7 +95,7 @@
     @include media-breakpoint-down(md) {
       position: absolute;
       margin-top: 64px;
-      background-color: $red;
+      background-color: $interactive-color;
       width: 100%;
       padding-left: 36px;
       padding-right: 36px;
