--- a/src/components/QuickSubmit/QuickSubmit.scss
+++ b/src/components/QuickSubmit/QuickSubmit.scss
@@ -29,22 +29,22 @@
   }
   .title {
     font-size: 2rem;
-    color: $black;
+    color: $primary-color;
   }
   h2 {
-    color: $black;
+    color: $primary-color;
     text-align: center;
     margin-bottom: 3rem;
   }
   div {
     > hr:last-child {
-      border-bottom:2px solid $black !important;
+      border-bottom:2px solid $primary-color !important;
     }
   }
   button[type=submit] {
-    background-color:$red !important;
+    background-color:$interactive-color !important;
     &:hover, &:focus {
-      background-color:lighten($red, 10%) !important;
+      background-color:lighten($interactive-color, 10%) !important;
     }
   }
 }
