--- a/src/containers/Case/Case.scss
+++ b/src/containers/Case/Case.scss
@@ -16,11 +16,11 @@
       bottom:0;
       right:10px;
       width:3px;
-      background:$grey;
+      background:$light-grey;
     }
 
     svg.country-map {
-      border:2px solid $grey;
+      border:2px solid $light-grey;
       padding:15px;
     }
     
@@ -42,7 +42,7 @@
 
       .progress-fill {
         height: 16px;
-        background-color: $black;
+        background-color: $primary-color;
       }
     }
 
@@ -59,7 +59,7 @@
       text-transform: uppercase;
       margin-bottom: 10px;
       margin-top: 20px;
-      border-bottom:2px solid $grey;
+      border-bottom:2px solid $light-grey;
     }
 
     .sub-sub-heading {
@@ -195,7 +195,7 @@
       }
 
       .case-title {
-        color: $black;
+        color: $primary-color;
         font-weight: 500;
         margin-bottom: 48px;
         font-size:2.25rem;
@@ -214,16 +214,16 @@
         .author-line {
           font-size: 14px;
           font-weight: 500;
-          color: $black;
+          color: $primary-color;
           line-height: 18px;
           margin-bottom:0;
 
           a {
-            color: $black;
+            color: $primary-color;
             font-weight: 600;
             text-decoration: underline;
             &:hover, &:focus {
-              color:$red;
+              color:$interactive-color;
             }
           }
         }
@@ -271,11 +271,11 @@
         }
 
         a {
-          color: $black;
+          color: $primary-color;
           font-weight: 600;
           text-decoration:underline;
           &:hover, &:focus {
-            color:$red;
+            color:$interactive-color;
           }
         }
       }
@@ -296,6 +296,6 @@
   right: 47px;
   bottom: 65px;
   button {
-    background-color: $red !important;
+    background-color: $interactive-color !important;
   }
 }
