--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -25,7 +25,7 @@
     }
     &:hover, &:focus {
       div {
-        background-color:$light-grey;
+        background-color:$dark-grey;
       }
     }
   }
