--- a/src/UniversalStyles.scss
+++ b/src/UniversalStyles.scss
@@ -4,9 +4,9 @@ $blue: #3f51b2;
 $orange: #ff6f00;
 $black: #323232;
 $red: #ec1414; 
-$light-grey: #f3efec;
-$dark-grey: #ece8e6;
-$grey-text: #777;
+$light-grey: #f1f1f1;
+$dark-grey: #e6e6e6;
+$grey-text: #767676;
 
 $primary-color: $black;
 $interactive-color: $red;
