--- a/src/components/MapVisualization/MapVisualization.scss
+++ b/src/components/MapVisualization/MapVisualization.scss
@@ -13,7 +13,7 @@
   }
 
   .map-information {
-    border-bottom: 5px solid $light-grey;
+    border-bottom: 5px solid $dark-grey;
     height: 0px;
     overflow: hidden;
 
