--- a/src/components/SearchHitCategory/SearchHitCategory.scss
+++ b/src/components/SearchHitCategory/SearchHitCategory.scss
@@ -4,13 +4,12 @@
 }
 
 .category-title {
-  font-size: 30px;
+  font-size: 3rem;
   font-weight: 600;
-  text-transform: uppercase;
   color: #323232;
   line-height: 30px;
-  padding: 20px 0 14px;
-  border-bottom:2px solid #f3efec;
+  padding: 20px 0;
+  border-bottom: 3px solid #323232;
 }
 
 .results {
