--- a/src/containers/Case/Case.scss
+++ b/src/containers/Case/Case.scss
@@ -6,21 +6,12 @@
   padding-top: 32px;
 
   .sidepanel {
-    padding: 0 32px;
+    padding: 0 42px 0 32px;
     margin-top: 48px;
     position:relative;
-    &:before {
-      content:"";
-      position:absolute;
-      top:0;
-      bottom:0;
-      right:10px;
-      width:3px;
-      background:$light-grey;
-    }
 
     svg.country-map {
-      border:2px solid $light-grey;
+      border:2px solid $dark-grey;
       padding:15px;
     }
     
@@ -59,13 +50,13 @@
       text-transform: uppercase;
       margin-bottom: 10px;
       margin-top: 20px;
-      border-bottom:2px solid $light-grey;
+      border-bottom:2px solid $dark-grey;
     }
 
     .sub-sub-heading {
       font-size: 14px;
       font-weight: 500;
-      color: #777;
+      color: $grey-text;
       line-height: 18px;
       margin-bottom: 8px;
       margin-top: 16px;
@@ -86,7 +77,7 @@
       a {
         font-size: 14px;
         font-weight: 500;
-        color: #777;
+        color: $grey-text;
         line-height: 18px;
         margin-bottom: 8px;
         margin-top: 8px;
@@ -230,7 +221,7 @@
 
         .date-line {
           font-size: 14px;
-          color: #777;
+          color: $grey-text;
           font-weight: 400;
           line-height: 18px;
           margin-bottom: 16px;
@@ -246,10 +237,10 @@
         }
 
         p, li {
-          font-size: 1.1rem;
-          font-weight: 100;
-          line-height: 1.7rem;
-          margin-bottom: 16px;
+          font-size: 1.2rem; 
+          font-weight: 400;
+          line-height: 1.9rem;
+          margin-bottom: 20px;
           max-width:720px;
         }
         
