--- a/src/Profile.scss
+++ b/src/Profile.scss
@@ -59,7 +59,7 @@
       top: 0;
     }
     p {
-      color: #999;
+      color: $grey-text;
       font-weight: 100;
       line-height: 32px;
     }
