--- a/src/components/EditProfile/EditProfile.scss
+++ b/src/components/EditProfile/EditProfile.scss
@@ -151,7 +151,7 @@
     }
     p {
       font-size: 22px;
-      color: #999;
+      color: $grey-text;
       font-weight: 100;
       line-height: 32px;
     }
