--- a/src/components/CaseEditor/CaseEditor.scss
+++ b/src/components/CaseEditor/CaseEditor.scss
@@ -1,3 +1,4 @@
+@import "../../UniversalStyles";
 .addCaseForm {
   padding: 3em;
 }
@@ -13,4 +14,35 @@
 
 .choicelist {
   opacity: 1;
+}
+
+.itemPics {
+  .col {
+    height: 11.3rem;
+    @include media-breakpoint-down(sm) {
+      height: 15.2rem;
+    }
+    @include media-breakpoint-only(xs) {
+      height: 17.2rem;
+    }
+    .box {
+      position: relative;
+      .checkbox {
+        position: absolute;
+        width: 1.4rem;
+        height: 1.4rem;
+        right: 0;
+        background: #fff;
+      }
+      text-align: center;
+      &.lead {
+        border: 4px solid $interactive-color;
+        .checkbox {
+          background-image: url("../../img/check.png");
+          background-repeat: no-repeat;
+          background-size: 1.4rem;
+        }
+      }
+    }
+  }
 }
