--- a/src/components/SearchHit/SearchHit.scss
+++ b/src/components/SearchHit/SearchHit.scss
@@ -38,6 +38,40 @@
   margin-bottom: 10px;
   background-color: $dark-grey;
   cursor: pointer;
+  position:relative;
+  &:after {
+    content:"";
+    position:absolute;
+    opacity:.25;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+  }
+  &.case {
+    &:after {
+      background:url('../../img/icon-thumbnail-case.svg') no-repeat center center;
+      background-size:20%;
+    }
+  }
+  &.method {
+    &:after {
+      background:url('../../img/icon-thumbnail-method.svg') no-repeat center center;
+      background-size:20%;
+    }
+  }
+  &.organization {
+    &:after {
+      background:url('../../img/icon-thumbnail-organization.svg') no-repeat center center;
+      background-size:20%;
+    }
+  }
+  &.news {
+    &:after {
+      background:url('../../img/icon-thumbnail-news.svg') no-repeat center center;
+      background-size:20%;
+    }
+  }
 }
 
 .list-item {
@@ -50,7 +84,7 @@
   color:$grey-text;
   font-weight:600;
   font-size:.9rem;
-  margin:20px 0 5px;
+  margin:20px 0 10px;
   letter-spacing:0.075rem;
 }
 .result-title-text {
@@ -62,6 +96,7 @@
   max-height: 78px;
   overflow: hidden;
   font-weight:600;
+  word-break:break-word;
   &:hover, &:focus {
     text-decoration:underline;
     color:$interactive-color;
