--- a/src/components/CaseEditor/CaseEditor.scss
+++ b/src/components/CaseEditor/CaseEditor.scss
@@ -27,12 +27,21 @@
     }
     .box {
       position: relative;
+      overflow: hidden;
+      height: 160px;
       .checkbox {
         position: absolute;
         width: 1.4rem;
         height: 1.4rem;
         right: 0;
         background: #fff;
+      }
+      small {
+        background: #fff;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        bottom: 0;
       }
       text-align: center;
       &.lead {
